--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bondidos.clevertec_task1">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/clevertec"
         android:label="@string/app_name"
