--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,18 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // dagger/hilt
-    implementation "com.google.dagger:hilt-android:2.40.2"
-    kapt "com.google.dagger:hilt-compiler:2.40.2"
+    implementation "com.google.dagger:hilt-android:2.40.5"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    kapt "com.google.dagger:hilt-compiler:2.40.5"
 
     // room
     implementation "androidx.room:room-runtime:2.4.1"
     implementation 'androidx.room:room-ktx:2.4.1'
     kapt "androidx.room:room-compiler:2.4.1"
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
